Disply items changed

--- a/imported_project_report.html
+++ b/imported_project_report.html
@@ -381,7 +381,7 @@ h3 {
 }
 </style>
 <title>
-Project Import Report for MessverstÄrker_V1.07_RS485</title>
+Project Import Report for Amplifier_assembly</title>
 </head>
 <body>
 <h1>
@@ -391,19 +391,19 @@ Project Import Summary</h1>
 <td style="border:1px solid">
 Import time</td>
 <td style="border:1px solid">
-Dec 29, 2023 7:03:03 PM</td>
+Jan 4, 2024 5:45:37 PM</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
 Original location</td>
 <td style="border:1px solid">
-D:\Pak\WORKSHOP\Germany_work\Messverst_rker_V1.07_RS485\MessverstÄrker_V1.07_RS485\.cproject</td>
+D:\Yelin\Amplifier_assembly\.cproject</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
 Original project name</td>
 <td style="border:1px solid">
-MessverstÄrker_V1.07_RS485</td>
+Amplifier_assembly</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
